<resources>
    <string name="app_name">XScroller</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="module_not_activated">XScroller Module is not Activated. Activate it to use this Module</string>
    <string name="ic_gen">General</string>
    <string name="fa_scr">Factor of Scrolling</string>
    <string name="per_ev_s">Per event scroll factor </string>
    <string name="scr">Scrolling Policy</string>
    <string name="scr_p">Scrolling Policy means how you want to scroll</string>
    <string name="ss">Scrolling Style</string>
    <string name="scr_s">How you want to Scroll</string>
    <string name="about">About</string>
    <string name="current_version">0.1.0 (Test Builds)</string>
    <array name="ScrollingPolicy">
        <item>Vertical</item>
        <item>Horizontal</item>
    </array>

    <array name="ScrollingStyle">
        <item>Smooth</item>
        <item>Rough</item>
    </array>
</resources>
